# LuisaCompute

./: .gitmodules  CMakeLists.txt  xmake.lua
.github/workflows/: build-cmake.yml  build-xmake.yml  code-format-check.yml
include/luisa/: luisa-compute.h
include/luisa/ast/: function.h  function_builder.h  op.h  type.h
include/luisa/backends/ext/: dx_hdr_ext.h  dx_hdr_ext.hpp  dx_hdr_ext_interface.h
include/luisa/core/: basic_traits.h  basic_types.h  dynamic_module.h  logging.h
include/luisa/core/stl/: format.h  hash.h
include/luisa/dsl/: builtin.h  func.h  local.h  ref.h  struct.h  sugar.h  var.h
include/luisa/runtime/: buffer.h  command_list.h  mipmap.h  swapchain.h  volume.h
include/luisa/runtime/rhi/: command.h  pixel.h  resource.h
include/luisa/runtime/rtx/: accel.h  motion_transform.h
include/luisa/xir/: argument.h  basic_block.h  builder.h  constant.h  function.h  ilist.h  instruction.h  metadata.h  module.h  name.h  pool.h  special_register.h  use.h  user.h  value.h
include/luisa/xir/instructions/: alloca.h  arithmetic.h  assert.h  assume.h  atomic.h  branch.h  break.h  call.h  cast.h  clock.h  continue.h  gep.h  if.h  intrinsic.h  load.h  loop.h  outline.h  phi.h  print.h  raster_discard.h  ray_query.h  resource.h  resource_query.h  resource_read.h  resource_write.h  return.h  store.h  switch.h  thread_group.h  unreachable.h
include/luisa/xir/metadata/: comment.h  location.h  name.h
include/luisa/xir/passes/: aggregate_field_bitmask.h  dce.h  dom_tree.h  extract_cfg.h  local_load_elimination.h  local_store_forward.h  outline.h  peephole_store_forward.h  pointer_usage.h  ref_arg_usage.h  sink_alloca.h  sroa.h  trace_gep.h
include/luisa/xir/translators/: ast2xir.h  json2xir.h  xir2json.h  xir2text.h
scripts/: cibw_install_deps.sh  download_and_patch_llvm.cmake  generate_universal_header.py  setup_compilation.cmake  validate_options.cmake  xmake_func.lua
src/: CMakeLists.txt  xmake.lua
src/api/: logging.cpp
src/ast/: constant_data.cpp  function.cpp  function_builder.cpp  function_duplicator.cpp  type.cpp  xmake.lua
src/backends/: CMakeLists.txt
src/backends/common/: CMakeLists.txt  shader_print_formatter.h  xmake.lua
src/backends/common/hlsl/: hlsl_codegen_util.cpp
src/backends/common/spirv_codegen/: __pch.h  codegen_lib.cpp  codegen_lib.h  register.cpp  register.h  string_builder.cpp  string_builder.h  (+1 more)
src/backends/cuda/: cuda_builtin_embedded.h  cuda_codegen_ast.cpp  cuda_device.cpp  cuda_device.h  cuda_host_buffer_pool.cpp  cuda_shader_printer.cpp  generate_device_library.py
src/backends/dx/: CMakeLists.txt  xmake.lua
src/backends/fallback/: CMakeLists.txt  fallback_accel.cpp  fallback_accel.h  fallback_bindless_array.cpp  fallback_bindless_array.h  fallback_buffer.cpp  fallback_buffer.h  fallback_codegen.cpp  fallback_codegen.h  fallback_command_queue.cpp  fallback_command_queue.h  fallback_device.cpp  fallback_device.h  fallback_device_api.cpp  fallback_device_api.h  fallback_device_api_ir_module.cpp  fallback_device_api_ir_module.h  fallback_device_api_map_symbols.inl.h  fallback_embree.h  fallback_event.cpp  fallback_mesh.cpp  fallback_mesh.h  fallback_shader.cpp  fallback_shader.h  fallback_stream.cpp  fallback_stream.h  fallback_swapchain.cpp  fallback_swapchain.h  fallback_texture.cpp  fallback_texture.h  fallback_texture_bc.cpp  fallback_texture_bc.h  fallback_texture_sampling.cpp  llvm_abi.h  llvm_codegen.cpp  llvm_codegen_builtin.cpp  llvm_codegen_expr.cpp  llvm_codegen_func.cpp  llvm_codegen_stmt.cpp  llvm_codegen_type.cpp  (+7 more)
src/backends/fallback/fallback_builtin/: fallback_device_api_wrappers.cpp  fallback_device_api_wrappers.darwin.arm64.inl  fallback_device_api_wrappers.darwin.x86_64.inl  fallback_device_api_wrappers.linux.arm64.inl  fallback_device_api_wrappers.linux.x86_64.inl  fallback_device_api_wrappers.linux.x86_64.ll.copy  fallback_device_api_wrappers.windows.amd64.inl  fallback_device_api_wrappers.windows.arm64.inl  fallback_device_api_wrappers.windows.x86_64.inl  generate_and_embed_fallback_device_lib.py
src/backends/metal/: metal_codegen_ast.cpp
src/backends/validation/: CMakeLists.txt  device.cpp  dx_hdr_ext_impl.h  stream.cpp
src/clangcxx/: CMakeLists.txt
src/core/: CMakeLists.txt  dynamic_module.cpp  logging.cpp  platform.cpp  xmake.lua
src/ext/: CMakeLists.txt
src/ext/stb/: CMakeLists.txt
src/gui/: CMakeLists.txt  window.cpp
src/ir_v2/: ir.cpp
src/py/: export_vector2.cpp  export_vector3.cpp  export_vector4.cpp
src/runtime/: CMakeLists.txt  context.cpp
src/tests/: CMakeLists.txt  test_ast_to_xir.cpp  test_copy.cpp  test_helloworld.cpp  test_imgui.cpp  test_motion_blur.cpp  test_mpm3d.cpp  test_path_tracing.cpp  test_path_tracing_hdr.cpp  test_path_tracing_nested_callable.cpp  test_rtx.cpp  test_sampler.cpp  test_shader_visuals_present.cpp  test_texture_io.cpp  test_win_hdr.cpp  test_xir_builder.cpp  xmake.lua
src/vstl/: CMakeLists.txt  xmake.lua
src/xir/: CMakeLists.txt  argument.cpp  basic_block.cpp  builder.cpp  constant.cpp  function.cpp  instruction.cpp  metadata.cpp  module.cpp  name.cpp  pool.cpp  special_register.cpp  use.cpp  user.cpp  value.cpp  xmake.lua
src/xir/instructions/: alloca.cpp  arithmetic.cpp  assert.cpp  assume.cpp  atomic.cpp  branch.cpp  break.cpp  call.cpp  cast.cpp  clock.cpp  continue.cpp  gep.cpp  intrinsic.cpp  intrinsic_name_map.inl.h  load.cpp  loop.cpp  op_name_map.cpp  outline.cpp  phi.cpp  print.cpp  ray_query.cpp  resource.cpp  return.cpp  store.cpp  switch.cpp  thread_group.cpp  unreachable.cpp  update_intrinsic_name_map.py
src/xir/metadata/: comment.cpp  location.cpp  name.cpp
src/xir/passes/: aggregate_field_bitmask.cpp  aggregate_field_bitmask.h  dce.cpp  dom_tree.cpp  extract_cfg.cpp  helpers.cpp  helpers.h  local_load_elimination.cpp  local_store_forward.cpp  outline.cpp  peephole_store_forward.cpp  pointer_usage.cpp  ref_arg_usage.cpp  sink_alloca.cpp  sroa.cpp  trace_gep.cpp  visualize_cfg.py
src/xir/tests/: test_aggregate_field_bitmasks.cpp
src/xir/translators/: ast2xir.cpp  json2xir.cpp  xir2json.cpp  xir2text.cpp
(+16 files in other folders)
